# ocr_mistrall

./: .cursorrules  .env_sample  .gitignore  Dockerfile  Makefile  README.md  api.py  current_implementation.py  docker-compose.yaml  pyproject.toml  send_file.py
baml_client/: __init__.py  async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: clients.baml  contract.baml  generators.baml
n8n_workflow/: Przyklad.json
ocr/: config.py  ocr.py
